--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\acer\AppData\Local\Temp\testng-eclipse-804504715\testng-customsuite.xml</span>
+                    <span>C:\Users\acer\AppData\Local\Temp\testng-eclipse--2018894165\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Login.ShaunLogin" class="method navigator-link" hash-for-method="LoginWrongpass">LoginWrongpass</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Login.ShaunLogin" class="method navigator-link" hash-for-method="LoginSuccess">LoginSuccess</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -117,7 +117,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Login.ShaunLogin" class="method navigator-link" hash-for-method="LoginSuccess">LoginSuccess</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Login.ShaunLogin" class="method navigator-link" hash-for-method="LoginWrongpass">LoginWrongpass</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -145,18 +145,18 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginWrongpass">
-                  </a> <!-- LoginWrongpass -->
-                  <span class="method-name">LoginWrongpass</span>
-                  <div class="stack-trace">org.openqa.selenium.TimeoutException: Expected condition failed: waiting for title to be &quot;Your email or password was incorrect.&quot;. Current title: &quot;Landing Page | Shaun platform demo Dec 03, 2024 Zoldyck 1004 Angel Demon&quot; (tried for 10 second(s) with 500 milliseconds interval)
+                  <a name="LoginSuccess">
+                  </a> <!-- LoginSuccess -->
+                  <span class="method-name">LoginSuccess</span>
+                  <div class="stack-trace">org.openqa.selenium.TimeoutException: Expected condition failed: waiting for title to be &quot;Home Page | Shaun platform demo Dec 03, 2024 Zoldyck 1004 Angel Demon&quot;. Current title: &quot;Landing Page | Shaun platform demo Dec 03, 2024 Zoldyck 1004 Angel Demon&quot; (tried for 10 second(s) with 500 milliseconds interval)
 Build info: version: &apos;4.23.1&apos;, revision: &apos;656257d8e9&apos;
 System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;22.0.2&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 133.0.6943.142, chrome: {chromedriverVersion: 133.0.6943.141 (2a5d6da0d61..., userDataDir: C:\Users\acer\AppData\Local...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:53561}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:53561/devtoo..., se:cdpVersion: 133.0.6943.142, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 6b2f982e9ab3a25685b6fd9f7ee7d26b
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 134.0.6998.35, chrome: {chromedriverVersion: 133.0.6943.126 (cffa127ce7b..., userDataDir: C:\Users\acer\AppData\Local...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:53080}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:53080/devtoo..., se:cdpVersion: 134.0.6998.35, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: bb155fa07dee25857f63d0824c88184b
 	at org.openqa.selenium.support.ui.WebDriverWait.timeoutException(WebDriverWait.java:84)
 	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:228)
-	at Login.ShaunLogin.LoginWrongpass(ShaunLogin.java:64)
+	at Login.ShaunLogin.LoginSuccess(ShaunLogin.java:46)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
 	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:141)
@@ -186,7 +186,7 @@ Session ID: 6b2f982e9ab3a25685b6fd9f7ee7d26b
 
 </div> <!-- stack-trace -->
                   <em>
-(Login wrong pass)                  </em>
+(T1: Verify login succcess)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -199,11 +199,11 @@ Session ID: 6b2f982e9ab3a25685b6fd9f7ee7d26b
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginSuccess">
-                  </a> <!-- LoginSuccess -->
-                  <span class="method-name">LoginSuccess</span>
+                  <a name="LoginWrongpass">
+                  </a> <!-- LoginWrongpass -->
+                  <span class="method-name">LoginWrongpass</span>
                   <em>
-(T1: Verify login succcess)                  </em>
+(T2: Login wrong pass)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -212,7 +212,7 @@ Session ID: 6b2f982e9ab3a25685b6fd9f7ee7d26b
                   </a> <!-- loginWithBlankfields -->
                   <span class="method-name">loginWithBlankfields</span>
                   <em>
-(login with blank fields)                  </em>
+(T3: login with blank fields)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -220,7 +220,7 @@ Session ID: 6b2f982e9ab3a25685b6fd9f7ee7d26b
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\acer\AppData\Local\Temp\testng-eclipse-804504715\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\acer\AppData\Local\Temp\testng-eclipse--2018894165\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -271,22 +271,22 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'LoginWrongpass')
+data.setCell(0, 1, 'LoginSuccess')
 data.setCell(0, 2, 'Login.ShaunLogin')
-data.setCell(0, 3, 11418);
+data.setCell(0, 3, 11487);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'LoginSuccess')
+data.setCell(1, 1, 'LoginWrongpass')
 data.setCell(1, 2, 'Login.ShaunLogin')
-data.setCell(1, 3, 4580);
+data.setCell(1, 3, 3231);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'loginWithBlankfields')
 data.setCell(2, 2, 'Login.ShaunLogin')
-data.setCell(2, 3, 3220);
+data.setCell(2, 3, 3223);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 19 seconds</span>
+              <span class="suite-total-time">Total running time: 17 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -318,38 +318,38 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">LoginSuccess</span>
-                <span class="method-start">2838 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">7420 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">7567 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">LoginWrongpass</span>
-                <span class="method-start">10087 ms</span>
+                <span class="method-name">LoginSuccess</span>
+                <span class="method-start">2571 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">21508 ms</span>
+                <span class="method-start">14063 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">21673 ms</span>
+                <span class="method-start">14208 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">LoginWrongpass</span>
+                <span class="method-start">16013 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">19244 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">19374 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">loginWithBlankfields</span>
-                <span class="method-start">24011 ms</span>
+                <span class="method-start">21069 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">27232 ms</span>
+                <span class="method-start">24293 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
